--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/router": "^1.2.1",
     "polished": "^3.3.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
